2012-01-27  Per Bothner  <per@bothner.com>

	* ExitableBlock.java (finish): If appropriate, do setUnreachabe().
	This fixes Savannah bug #35362: "endless loop + unused continuation".

2011-12-12  Per Bothner  <per@bothner.com>

	* Type.java (isInterface): New method.

2011-12-01  Per Bothner  <per@bothner.com>

	* ClassType.java (compare): Fix thinko.

	* ClassType.java (isSubclass): Add explicit test for Object.
	This is both for performance and it helps work around a bug in
	subtyping a not-yet resolved ClassExp.

2011-10-29  Jamison Hope  <jrh@theptrgroup.com>

	* PrimType.java (unboxedType): New static convenience method.

2011-10-07  Per Bothner  <per@bothner.com>

	* ParameterizedType.java (getReflectClass): New method.

2011-10-01  Jamison Hope  <jrh@theptrgroup.com>

	* Method.java (isNative): New method.

2011-08-04  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitInc): If increment is zero, do nothing.

2011-08-03  Per Bothner  <per@bothner.com>

	* StackMapTableAttr.java (encodeVerificationType): Fix handling of
	UninitializedType - which was broken when parameterized types were
	added.  This fixes Savannah bug #33916 "Build error with Java7".

2011-07-27  Per Bothner  <per@bothner.com>

	* ParameterizedType.java (getName): Call toString().
	* Type.java (getName): Make non-final.

2011-07-12  Per Bothner  <per@bothner.com>

	* Type.java (javalangannotationAnnotationType): New static field.
	* AnnotationEntry.java (asAnnotationValue): Moved from
	gnu/kawa/reflect/MakeAnnotation.java.
	(addMember(String,Object,Type)): New convenience method.

2011-06-29  Per Bothner  <bothner@kuling.bothner.com>

	Improved support for parameterized types.
	* TypeVariable.java: New class, extends ObjectType.
	* Makefile.am: Update accordingly.
	* Type.java (make(java.lang.reflect.Type)): Handle TypeVariable.
	Fix thinko.
	*  StackMapTableAttr.java (encodeVerificationType): Use getRawType.
	* ClassType.java (getTypeParameters): New method.