@@ -174,7 +174,7 @@ public class SetExp extends AccessExp
         && decl.context instanceof ModuleExp
 	&& isDefining() && ! decl.ignorable())
       {
-        if (decl.shouldEarlyInit())
+        if (decl.shouldEarlyInit() && ! decl.field.hasConstantValueAttr()) 
           BindingInitializer.create(decl, new_value, comp);
         if (needValue)
           {
